Apply modern Java / JVM axis: fix outdated pinning doctrine, fail fast on corrupt schedule_type
JVM-1 + JAVA-1: -Djdk.tracePinnedThreads was removed in JDK 24, and the
premise behind it -- "synchronized in a blocking path pins the
carrier" -- stopped being true the same release (JEP 491). CLAUDE.md,
the master doc, and the ArchitectureTest rule comment all cited a
failure mode the JDK 25 runtime this project targets no longer has;
updated to JFR's jdk.VirtualThreadPinned and reframed the
ReentrantLock preference around JCIP's actual lock capabilities
(tryLock with timeout, interruptible acquisition, multiple
Conditions) instead of a pinning argument that no longer holds.

JAVA-2: registered in CLAUDE.md why StructuredTaskScope isn't adopted
in main yet -- JEP 505 is still preview in JDK 25, and a preview class
file would pin every host application to that exact JDK release,
unacceptable for an embedded library.

JAVA-4: JdbcJobStore's schedule_type switch treated any unrecognized
value as ON_DEMAND -- a corrupted or future-written row would silently
stop firing instead of failing loudly, inconsistent with the
Misfire/DefinitionSource parsing three lines below in the same method.
Now throws, with a test proving it.

JAVA-7: the four instanceof checks extracting cron/interval columns in
upsert had no exhaustiveness guarantee; a future Schedule variant would
silently produce four nulls instead of a compile error. Replaced with
a small local record built from a single exhaustive switch, mirroring
the pattern the file already uses correctly in scheduleType().

JAVA-9: MutableClock.advance() did a non-atomic read-modify-write over
a volatile field -- same class of bug as CONC-3 in DatabaseClock, same
fix (AtomicReference + updateAndGet). It's public test-kit API and
concurrency tests are its primary audience.

JAVA-5: unused lambda parameters, pattern bindings, and caught
exceptions renamed to `_` (JDK 22+) across the row mappers, the two
exhaustive Schedule switches, and